Icon Spacing Re-fix

--- a/ss.css
+++ b/ss.css
@@ -9,7 +9,7 @@
 margin-left: 40em
 }
 a{
-   padding-left: 1.4vw;
+   padding-left: 1.3em;
 }
 .core{
     width: 100%;
